--- a/package.json
+++ b/package.json
@@ -1,28 +1,62 @@
 {
-  "name": "@confrontend/ui-components",
+  "name": "@confrontend/ui-library",
   "version": "1.7.0",
   "private": true,
-  "main": "src/index.ts",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.41",
-    "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "webpack-dev-server --mode development --hot",
+    "build": "webpack --config webpack.config.js --mode production"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "dependencies": {
+    "@google-analytics/data": "^3.0.0",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@types/node": "16.11.34",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "^18.0.3",
+    "@types/react-helmet": "^6.1.5",
+    "axios": "0.27.2",
+    "copy-webpack-plugin": "^11.0.0",
+    "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
+    "firebase": "9.8.2",
+    "papaparse": "^5.3.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.42.1",
+    "react-icons": "^4.4.0",
+    "react-markdown": "^8.0.4",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "6.3.0",
+    "react-scripts": "^5.0.1",
+    "remark-gfm": "^3.0.1",
+    "styled-components": "^5.3.6",
+    "web-vitals": "2.1.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.2.0",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "^29.2.6",
+    "@types/styled-components": "^5.1.26",
+    "babel-loader": "^8.2.3",
+    "html-webpack-plugin": "^5.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.1"
   },
   "browserslist": {
     "production": [
