--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@google-analytics/data": "^3.0.0",
+    "@mui/material": "^5.11.5",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "16.11.34",
     "@types/react": "18.0.9",
@@ -36,6 +39,7 @@
     "react-scripts": "^5.0.1",
     "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.6",
+    "validator": "^13.7.0",
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
@@ -47,6 +51,7 @@
     "@testing-library/user-event": "13.5.0",
     "@types/jest": "^29.2.6",
     "@types/styled-components": "^5.1.26",
+    "@types/validator": "^13.7.10",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
