--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@confrontend/ui-library",
   "version": "1.7.0",
   "private": true,
+  "main": "src/index.ts",
   "scripts": {
     "start": "webpack-dev-server --mode development --hot",
     "build": "webpack --config webpack.config.js --mode production"
