--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@confrontend/ui-library",
+  "name": "confrontend_ui_library",
   "version": "1.7.0",
   "private": true,
-  "main": "dist/bundle.js",
+  "main": "main/bundle.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.config.js  --hot",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.dev.config.js"
   },
   "eslintConfig": {
     "extends": [
@@ -13,15 +13,14 @@
       "react-app/jest"
     ]
   },
-  "dependencies": {
-    "validator": "^13.7.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.4.4",
     "@mui/system": "^5.4.4",
     "@testing-library/jest-dom": "5.16.4",
@@ -30,10 +29,12 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "^18.0.3",
     "@types/styled-components": "^5.1.26",
+    "validator": "^13.7.0",
     "@types/validator": "^13.7.10",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
+    "next": "^13.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.42.1",
@@ -54,7 +55,8 @@
     "@mui/material": "^5.4.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "validator": "^13.7.0"
   },
   "browserslist": {
     "production": [
