--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "noEmit": false,
     "jsx": "react-jsx"
   },
-  "include": ["src", "index.ts"]
+  "include": ["src", "index.ts", "typings"]
 }
