--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,12 @@
 {
-  "presets": ["@babel/env", "@babel/react", "@babel/preset-typescript"],
+  "presets": [
+    "@babel/preset-env",
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
+  ],
   "plugins": ["@babel/plugin-proposal-class-properties"]
 }
