--- a/package.json
+++ b/package.json
@@ -15,35 +15,41 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.4.4",
     "@mui/system": "^5.4.4",
+    "@swc/core": "^1.3.50",
+    "@swc/jest": "^0.2.26",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "16.11.34",
     "@types/react": "18.0.9",
     "@types/react-dom": "^18.0.3",
     "@types/styled-components": "^5.1.26",
-    "validator": "^13.7.0",
     "@types/validator": "^13.7.10",
-    "babel-loader": "^8.2.3",
+    "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
-    "next": "^13.3.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.42.1",
     "react-router-dom": "6.3.0",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.6",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
+    "validator": "^13.7.0",
     "web-vitals": "2.1.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^5.0.1",
