--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "@types/styled-components": "^5.1.26",
     "@types/validator": "^13.7.10",
     "babel-loader": "^9.1.2",
+    "chart.js": "^4.2.1",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.42.1",
     "react-router-dom": "6.3.0",
