--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "confrontend_ui_library",
   "version": "1.7.0",
   "private": true,
-  "main": "src/index.tsx",
+  "main": "./lib/index.es.js",
+  "module": "./lib/index.es.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "start": "webpack serve --config webpack.dev.config.js  --hot",
-    "build": "webpack --config webpack.dev.config.js"
+    "build": "rm -rf lib/* && concurrently \"yarn:build:*\"",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:lib": "vite --config ./vite.config.ts build src/"
   },
   "eslintConfig": {
     "extends": [
@@ -34,6 +38,7 @@
     "@types/react-dom": "^18.0.3",
     "@types/styled-components": "^5.1.26",
     "@types/validator": "^13.7.10",
+    "@vitejs/plugin-react": "^3.1.0",
     "babel-loader": "^9.1.2",
     "chart.js": "^4.2.1",
     "css-loader": "^6.7.3",
@@ -45,6 +50,7 @@
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.42.1",
     "react-router-dom": "6.3.0",
+    "rollup-plugin-visualizer": "^5.9.0",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.6",
     "ts-jest": "^29.1.0",
@@ -52,6 +58,8 @@
     "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
     "validator": "^13.7.0",
+    "vite": "^4.2.2",
+    "vite-plugin-svgr": "^2.4.0",
     "web-vitals": "2.1.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^5.0.1",
