--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "start": "vite src/",
     "build": "rm -rf lib/* && concurrently \"yarn:build:*\"",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:lib": "vite --config ./vite.config.ts build src/"
+    "build:lib": "vite --config ./vite.config.ts build src/",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
@@ -28,6 +30,13 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.4.4",
     "@mui/system": "^5.4.4",
+    "@storybook/addon-essentials": "^7.0.23",
+    "@storybook/addon-interactions": "^7.0.23",
+    "@storybook/addon-links": "^7.0.23",
+    "@storybook/blocks": "^7.0.23",
+    "@storybook/react": "^7.0.23",
+    "@storybook/react-webpack5": "^7.0.23",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@swc/core": "^1.3.50",
     "@swc/jest": "^0.2.26",
     "@testing-library/jest-dom": "5.16.4",
@@ -42,15 +51,18 @@
     "babel-loader": "^9.1.2",
     "chart.js": "^4.2.1",
     "css-loader": "^6.7.3",
+    "eslint-plugin-storybook": "^0.6.12",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.42.1",
     "react-router-dom": "6.3.0",
     "rollup-plugin-visualizer": "^5.9.0",
+    "storybook": "^7.0.23",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.6",
     "ts-jest": "^29.1.0",
