--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "16.11.34",
     "@types/react": "18.0.9",
     "@types/react-dom": "^18.0.3",
+    "@types/react-table": "^7.7.14",
     "@types/validator": "^13.7.10",
     "@vitejs/plugin-react": "^3.1.0",
     "babel-loader": "^9.1.2",
@@ -96,5 +97,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "react-table": "^7.8.0"
   }
 }
