--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "confrontend_ui_library",
-  "version": "1.7.0",
-  "private": true,
+  "name": "@Confrontend/ui-library",
+  "version": "1.8.0",
   "main": "./lib/index.es.js",
   "module": "./lib/index.es.js",
   "types": "./lib/index.d.ts",
@@ -9,7 +8,7 @@
     "start": "vite src/",
     "build": "rm -rf lib/* && concurrently \"yarn:build:*\"",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:lib": "vite --config ./vite.config.ts build src/",
+    "build:lib": "yarn build:types && vite --config ./vite.config.ts build src/",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -100,5 +99,8 @@
   },
   "dependencies": {
     "react-table": "^7.8.0"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
