--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@Confrontend/ui-library",
-  "version": "1.11.0",
+  "version": "1.12.0",
   "main": "lib/index.es.js",
   "types": "lib/src/index.d.ts",
   "scripts": {
@@ -101,5 +101,8 @@
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
