--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@Confrontend/ui-library",
-  "version": "1.12.0",
+  "version": "1.13.0",
   "main": "lib/index.es.js",
   "types": "lib/src/index.d.ts",
   "scripts": {
@@ -103,6 +103,6 @@
     "registry": "https://npm.pkg.github.com"
   },
   "files": [
-    "dist"
+    "lib/**/*"
   ]
 }
