--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/react
 # Edit at https://www.toptal.com/developers/gitignore?templates=react
 
@@ -21,3 +20,4 @@ sketch
 # End of https://www.toptal.com/developers/gitignore/api/react
 dist
 lib
+.npmrc
