--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.4.4",
     "@mui/system": "^5.4.4",
+    "@storybook/addon-actions": "^7.2.3",
     "@storybook/addon-essentials": "^7.0.23",
     "@storybook/addon-interactions": "^7.0.23",
     "@storybook/addon-links": "^7.0.23",
