--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@Confrontend/ui-library",
-  "version": "1.19.0",
-  "main": "lib/index.es.js",
+  "version": "1.20.0",
+  "main": "lib/index.cjs.js",
+  "module": "lib/index.es.js",
   "types": "lib/src/index.d.ts",
   "scripts": {
     "start": "vite src/",
